# deepobs

./: .gitignore  CLAUDE.md  README.md  README_PYTORCH.md  analyze_results.py  benchmark_config.yaml  benchmark_config_adamw_small.yaml  benchmark_config_quick.yaml  pyproject.toml  requirements_doc.txt  run_benchmark.py  setup.py  smoke_test.py
.claude/: CLAUDE.md
deepobs/: __init__.py  analyze.py  benchmark.py  cli.py  test_phase5_datasets.py
deepobs/analyzer/: analyze_utils.py
deepobs/pytorch/: QUICKSTART.md  __init__.py  config.py
deepobs/pytorch/datasets/: README.md  __init__.py  cifar10.py  cifar100.py  dataset.py  fmnist.py  food101.py  imagenet.py  mnist.py  penn_treebank.py  quadratic.py  svhn.py  tolstoi.py  two_d.py
deepobs/pytorch/runners/: README.md  __init__.py  runner_utils.py  standard_runner.py
deepobs/pytorch/testproblems/: README.md  _2c2d.py  _3c3d.py  __init__.py  _gpt_micro.py  _inception_v3.py  _logreg.py  _mlp.py  _vae.py  _vgg.py  _vit_micro.py  _wrn.py  cifar100_3c3d.py  cifar100_allcnnc.py  cifar100_vgg16.py  cifar100_vgg19.py  cifar100_wrn404.py  cifar10_3c3d.py  cifar10_vgg16.py  cifar10_vgg19.py  fmnist_2c2d.py  fmnist_logreg.py  fmnist_mlp.py  fmnist_vae.py  food101_vgg16.py  food101_vgg19.py  food101_vit_micro.py  imagenet_inception_v3.py  imagenet_vgg16.py  imagenet_vgg19.py  mnist_2c2d.py  mnist_logreg.py  mnist_mlp.py  mnist_vae.py  ptb_gpt_micro.py  ptb_lstm.py  quadratic_deep.py  svhn_3c3d.py  svhn_wrn164.py  testproblem.py  (+5 more)
deepobs/scripts/: deepobs_estimate_runtime.py  deepobs_get_baselines.sh  deepobs_plot_results.py  deepobs_prepare_data.sh
docs/: API_REFERENCE.md  BENCHMARK_SUITE_README.md  CHANGELOG_PYTORCH.md  CONTRIBUTORS.md  KNOWN_ISSUES.md  MIGRATION_GUIDE.md  QUICK_START_BENCHMARK.md  README.md  README_PYTORCH.md  index.rst
docs/api/: datasets.rst  testproblems.rst
docs/pytorch-migration/: PHASE4_SUMMARY.md  README.md  deepobs_migration_plan.md  deepobs_migration_status.md  implementation_checklist.md  phase2_completion_report.md  phase3_completion_report.md  phase4_completion_report.md  resumption_guide.md
docs/user_guide/: overview.rst  quick_start.rst  suggested_protocol.rst  tutorial.rst
examples/: README.md  basic_usage.py  benchmark_config.yaml  benchmark_config_adamw_small.yaml  benchmark_config_angol_small.yaml  benchmark_config_quick.yaml  custom_optimizer_benchmark.py  learning_rate_schedule.py  multiple_test_problems.py  pytorch_runner_example.py  result_analysis.py
planning/: CLAUDE.md  DOCUMENTATION_INDEX.md  FINAL_PROJECT_REPORT.md  IMPLEMENTATION_STATUS.md  MIGRATION_COMPLETE.md  MIGRATION_COMPLETE_SUMMARY.md  PHASE10_COMPLETION_REPORT.md  PHASE2_COMPLETE.md  PHASE3_SUMMARY.md  PHASE5_IMPLEMENTATION_NOTES.md  PHASE6_IMPLEMENTATION_NOTES.md  PHASE7_COMPLETION_SUMMARY.md  PHASE7_IMPLEMENTATION_NOTES.md  PHASE8_DOCUMENTATION_SUMMARY.md  PHASE9_FILES_CREATED.md  PHASE9_QUICK_REFERENCE.md  PHASE9_TESTING_SUMMARY.md  PROJECT_SUMMARY.md  README.md  RELEASE_CHECKLIST.md
tests/: README.md  conftest.py  manual_test_datasets.py  test_architectures.py  test_config.py  test_datasets.py  test_pytorch_architectures.py  test_pytorch_datasets.py  test_runner.py  test_runner_simple.py  test_runner_standalone.py  test_testproblems.py  test_utils.py  validate_phase4.py
tests/integration/: __init__.py  test_all_problems.py  test_end_to_end.py
