[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepobs"
version = "1.2.0"
description = "Deep Learning Optimizer Benchmark Suite"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Frank Schneider, Lukas Balles and Philipp Hennig", email = "frank.schneider@tue.mpg.de"}
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "argparse",
    "numpy>=1.19.0",
    "pandas>=1.1.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "pyyaml>=6.0.3",
    "scipy>=1.10.1",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "pytorch-optimizer>=3.4.0",
    "plotly>=6.5.0",
]

[project.scripts]
deepobs = "deepobs.cli:main"

[project.optional-dependencies]
# PyTorch is now a required dependency (kept for backwards compatibility)
pytorch = []
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=20.8b1",
    "flake8>=3.8.0",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["deepobs*"]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=20.8b1",
    "flake8>=3.8.0",
]
